Remove box shadows where they shouldn't be, make comment actions bigger, and fix like buttons having the wrong colour

--- a/app/assets/stylesheets/ui/buttons/bubbles.css
+++ b/app/assets/stylesheets/ui/buttons/bubbles.css
@@ -2,6 +2,7 @@
   line-height: 27px;
   border: none;
   border-radius: 100%;
+  box-shadow: none;
   padding: 5px;
   width: 37px;
   height: 37px;
